syntax.output
Nonterminals useless in grammar

    StructSpecifier
    OptTag
    Tag


Terminals unused in grammar

    STRUCT


State 12 conflicts: 1 shift/reduce
State 36 conflicts: 1 shift/reduce
State 56 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier FunDec CompSt
    6       | Specifier FunDec SEMI
    7       | error SEMI
    8       | Specifier error SEMI
    9       | error Specifier SEMI

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList
   12           | VarDec error ExtDefList

   13 Specifier: TYPE

   14 VarDec: ID
   15       | ID LB INT RB
   16       | VarDec LB error RB

   17 FunDec: ID LP VarList RP
   18       | ID LP RP
   19       | ID LP error RP
   20       | error LP VarList RP

   21 VarList: ParamDec COMMA VarList
   22        | ParamDec

   23 ParamDec: Specifier VarDec

   24 CompSt: LC DefList StmtList RC

   25 StmtList: Stmt StmtList
   26         | %empty

   27 Stmt: Exp SEMI
   28     | CompSt
   29     | RETURN Exp SEMI
   30     | IF LP Exp RP Stmt
   31     | IF LP Exp RP Stmt ELSE Stmt
   32     | WHILE LP Exp RP Stmt
   33     | error SEMI
   34     | Exp error SEMI
   35     | RETURN Exp error
   36     | RETURN error SEMI

   37 DefList: Def DefList
   38        | %empty

   39 Def: Specifier DecList SEMI
   40    | Specifier error SEMI
   41    | Specifier DecList error

   42 DecList: Dec
   43        | Dec COMMA DecList

   44 Dec: VarDec
   45    | VarDec ASSIGNOP Exp

   46 Exp: Exp ASSIGNOP Exp
   47    | Exp AND Exp
   48    | Exp OR Exp
   49    | Exp RELOP Exp
   50    | Exp PLUS Exp
   51    | Exp MINUS Exp
   52    | Exp STAR Exp
   53    | Exp DIV Exp
   54    | LP Exp RP
   55    | MINUS Exp
   56    | NOT Exp
   57    | ID LP Args RP
   58    | ID LP RP
   59    | ID LB Exp RB
   60    | Exp DOT ID
   61    | ID
   62    | INT
   63    | FLOAT
   64    | Exp ASSIGNOP error
   65    | Exp AND error
   66    | Exp OR error
   67    | Exp RELOP error
   68    | Exp PLUS error
   69    | Exp MINUS error
   70    | Exp STAR error
   71    | Exp DIV error
   72    | LP error RP
   73    | MINUS error
   74    | NOT error
   75    | ID LP error RP
   76    | Exp LB error RB

   77 Args: Exp COMMA Args
   78     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 8 9 12 16 19 20 33 34 35 36 40 41 64 65 66 67 68 69 70 71 72 73 74 75 76
    INT <node> (258) 15 62
    FLOAT <node> (259) 63
    ID <node> (260) 14 15 17 18 19 57 58 59 60 61 75
    SEMI <node> (261) 4 6 7 8 9 27 29 33 34 36 39 40
    COMMA <node> (262) 11 21 43 77
    ASSIGNOP <node> (263) 45 46 64
    RELOP <node> (264) 49 67
    PLUS <node> (265) 50 68
    MINUS <node> (266) 51 55 69 73
    STAR <node> (267) 52 70
    DIV <node> (268) 53 71
    AND <node> (269) 47 65
    OR <node> (270) 48 66
    DOT <node> (271) 60
    NOT <node> (272) 56 74
    TYPE <node> (273) 13
    LP <node> (274) 17 18 19 20 30 31 32 54 57 58 72 75
    RP <node> (275) 17 18 19 20 30 31 32 54 57 58 72 75
    LB <node> (276) 15 16 59 76
    RB <node> (277) 15 16 59 76
    LC <node> (278) 24
    RC <node> (279) 24
    STRUCT <node> (280)
    RETURN <node> (281) 29 35 36
    IF <node> (282) 30 31
    ELSE <node> (283) 31
    WHILE <node> (284) 32
    UMINUS (285)
    LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    Program <node> (33)
        on left: 1
        on right: 0
    ExtDefList <node> (34)
        on left: 2 3
        on right: 1 2 12
    ExtDef <node> (35)
        on left: 4 5 6 7 8 9
        on right: 2
    ExtDecList <node> (36)
        on left: 10 11 12
        on right: 4 11
    Specifier <node> (37)
        on left: 13
        on right: 4 5 6 8 9 23 39 40 41
    VarDec <node> (38)
        on left: 14 15 16
        on right: 10 11 12 16 23 44 45
    FunDec <node> (39)
        on left: 17 18 19 20
        on right: 5 6
    VarList <node> (40)
        on left: 21 22
        on right: 17 20 21
    ParamDec <node> (41)
        on left: 23
        on right: 21 22
    CompSt <node> (42)
        on left: 24
        on right: 5 28
    StmtList <node> (43)
        on left: 25 26
        on right: 24 25
    Stmt <node> (44)
        on left: 27 28 29 30 31 32 33 34 35 36
        on right: 25 30 31 32
    DefList <node> (45)
        on left: 37 38
        on right: 24 37
    Def <node> (46)
        on left: 39 40 41
        on right: 37
    DecList <node> (47)
        on left: 42 43
        on right: 39 41 43
    Dec <node> (48)
        on left: 44 45
        on right: 42 43
    Exp <node> (49)
        on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76
        on right: 27 29 30 31 32 34 35 45 46 47 48 49 50 51 52 53 54 55 56 59 60 64 65 66 67 68 69 70 71 76 77 78
    Args <node> (50)
        on left: 77 78
        on right: 57 77


State 0

    0 $accept: . Program $end

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 3 (ExtDefList)

    Program     go to state 3
    ExtDefList  go to state 4
    ExtDef      go to state 5
    Specifier   go to state 6


State 1

    7 ExtDef: error . SEMI
    9       | error . Specifier SEMI

    SEMI  shift, and go to state 7
    TYPE  shift, and go to state 2

    Specifier  go to state 8


State 2

   13 Specifier: TYPE .

    $default  reduce using rule 13 (Specifier)


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 9


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 3 (ExtDefList)
    SEMI  reduce using rule 3 (ExtDefList)

    ExtDefList  go to state 10
    ExtDef      go to state 5
    Specifier   go to state 6


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . FunDec CompSt
    6       | Specifier . FunDec SEMI
    8       | Specifier . error SEMI

    error  shift, and go to state 11
    ID     shift, and go to state 12

    ExtDecList  go to state 13
    VarDec      go to state 14
    FunDec      go to state 15


State 7

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 8

    9 ExtDef: error Specifier . SEMI

    SEMI  shift, and go to state 16


State 9

    0 $accept: Program $end .

    $default  accept


State 10

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 11

    8 ExtDef: Specifier error . SEMI
   20 FunDec: error . LP VarList RP

    SEMI  shift, and go to state 17
    LP    shift, and go to state 18


State 12

   14 VarDec: ID .
   15       | ID . LB INT RB
   17 FunDec: ID . LP VarList RP
   18       | ID . LP RP
   19       | ID . LP error RP

    LP  shift, and go to state 19
    LB  shift, and go to state 20

    LB        [reduce using rule 14 (VarDec)]
    $default  reduce using rule 14 (VarDec)


State 13

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 21


State 14

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   12           | VarDec . error ExtDefList
   16 VarDec: VarDec . LB error RB

    error  shift, and go to state 22
    COMMA  shift, and go to state 23
    LB     shift, and go to state 24

    SEMI  reduce using rule 10 (ExtDecList)


State 15

    5 ExtDef: Specifier FunDec . CompSt
    6       | Specifier FunDec . SEMI

    SEMI  shift, and go to state 25
    LC    shift, and go to state 26

    CompSt  go to state 27


State 16

    9 ExtDef: error Specifier SEMI .

    $default  reduce using rule 9 (ExtDef)


State 17

    8 ExtDef: Specifier error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 18

   20 FunDec: error LP . VarList RP

    TYPE  shift, and go to state 2

    Specifier  go to state 28
    VarList    go to state 29
    ParamDec   go to state 30


State 19

   17 FunDec: ID LP . VarList RP
   18       | ID LP . RP
   19       | ID LP . error RP

    error  shift, and go to state 31
    TYPE   shift, and go to state 2
    RP     shift, and go to state 32

    Specifier  go to state 28
    VarList    go to state 33
    ParamDec   go to state 30


State 20

   15 VarDec: ID LB . INT RB

    INT  shift, and go to state 34


State 21

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 22

   12 ExtDecList: VarDec error . ExtDefList

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    SEMI  reduce using rule 3 (ExtDefList)

    ExtDefList  go to state 35
    ExtDef      go to state 5
    Specifier   go to state 6


State 23

   11 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 36

    ExtDecList  go to state 37
    VarDec      go to state 14


State 24

   16 VarDec: VarDec LB . error RB

    error  shift, and go to state 38


State 25

    6 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 6 (ExtDef)


State 26

   24 CompSt: LC . DefList StmtList RC

    TYPE  shift, and go to state 2

    $default  reduce using rule 38 (DefList)

    Specifier  go to state 39
    DefList    go to state 40
    Def        go to state 41


State 27

    5 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 5 (ExtDef)


State 28

   23 ParamDec: Specifier . VarDec

    ID  shift, and go to state 36

    VarDec  go to state 42


State 29

   20 FunDec: error LP VarList . RP

    RP  shift, and go to state 43


State 30

   21 VarList: ParamDec . COMMA VarList
   22        | ParamDec .

    COMMA  shift, and go to state 44

    $default  reduce using rule 22 (VarList)


State 31

   19 FunDec: ID LP error . RP

    RP  shift, and go to state 45


State 32

   18 FunDec: ID LP RP .

    $default  reduce using rule 18 (FunDec)


State 33

   17 FunDec: ID LP VarList . RP

    RP  shift, and go to state 46


State 34

   15 VarDec: ID LB INT . RB

    RB  shift, and go to state 47


State 35

   12 ExtDecList: VarDec error ExtDefList .

    $default  reduce using rule 12 (ExtDecList)


State 36

   14 VarDec: ID .
   15       | ID . LB INT RB

    LB  shift, and go to state 20

    LB        [reduce using rule 14 (VarDec)]
    $default  reduce using rule 14 (VarDec)


State 37

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 38

   16 VarDec: VarDec LB error . RB

    RB  shift, and go to state 48


State 39

   39 Def: Specifier . DecList SEMI
   40    | Specifier . error SEMI
   41    | Specifier . DecList error

    error  shift, and go to state 49
    ID     shift, and go to state 36

    VarDec   go to state 50
    DecList  go to state 51
    Dec      go to state 52


State 40

   24 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 53
    INT     shift, and go to state 54
    FLOAT   shift, and go to state 55
    ID      shift, and go to state 56
    MINUS   shift, and go to state 57
    NOT     shift, and go to state 58
    LP      shift, and go to state 59
    LC      shift, and go to state 26
    RETURN  shift, and go to state 60
    IF      shift, and go to state 61
    WHILE   shift, and go to state 62

    RC  reduce using rule 26 (StmtList)

    CompSt    go to state 63
    StmtList  go to state 64
    Stmt      go to state 65
    Exp       go to state 66


State 41

   37 DefList: Def . DefList

    TYPE  shift, and go to state 2

    $default  reduce using rule 38 (DefList)

    Specifier  go to state 39
    DefList    go to state 67
    Def        go to state 41


State 42

   16 VarDec: VarDec . LB error RB
   23 ParamDec: Specifier VarDec .

    LB  shift, and go to state 24

    $default  reduce using rule 23 (ParamDec)


State 43

   20 FunDec: error LP VarList RP .

    $default  reduce using rule 20 (FunDec)


State 44

   21 VarList: ParamDec COMMA . VarList

    TYPE  shift, and go to state 2

    Specifier  go to state 28
    VarList    go to state 68
    ParamDec   go to state 30


State 45

   19 FunDec: ID LP error RP .

    $default  reduce using rule 19 (FunDec)


State 46

   17 FunDec: ID LP VarList RP .

    $default  reduce using rule 17 (FunDec)


State 47

   15 VarDec: ID LB INT RB .

    $default  reduce using rule 15 (VarDec)


State 48

   16 VarDec: VarDec LB error RB .

    $default  reduce using rule 16 (VarDec)


State 49

   40 Def: Specifier error . SEMI

    SEMI  shift, and go to state 69


State 50

   16 VarDec: VarDec . LB error RB
   44 Dec: VarDec .
   45    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 70
    LB        shift, and go to state 24

    $default  reduce using rule 44 (Dec)


State 51

   39 Def: Specifier DecList . SEMI
   41    | Specifier DecList . error

    error  shift, and go to state 71
    SEMI   shift, and go to state 72


State 52

   42 DecList: Dec .
   43        | Dec . COMMA DecList

    COMMA  shift, and go to state 73

    $default  reduce using rule 42 (DecList)


State 53

   33 Stmt: error . SEMI

    SEMI  shift, and go to state 74


State 54

   62 Exp: INT .

    $default  reduce using rule 62 (Exp)


State 55

   63 Exp: FLOAT .

    $default  reduce using rule 63 (Exp)


State 56

   57 Exp: ID . LP Args RP
   58    | ID . LP RP
   59    | ID . LB Exp RB
   61    | ID .
   75    | ID . LP error RP

    LP  shift, and go to state 75
    LB  shift, and go to state 76

    LB        [reduce using rule 61 (Exp)]
    $default  reduce using rule 61 (Exp)


State 57

   55 Exp: MINUS . Exp
   73    | MINUS . error

    error  shift, and go to state 77
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 78


State 58

   56 Exp: NOT . Exp
   74    | NOT . error

    error  shift, and go to state 79
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 80


State 59

   54 Exp: LP . Exp RP
   72    | LP . error RP

    error  shift, and go to state 81
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 82


State 60

   29 Stmt: RETURN . Exp SEMI
   35     | RETURN . Exp error
   36     | RETURN . error SEMI

    error  shift, and go to state 83
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 84


State 61

   30 Stmt: IF . LP Exp RP Stmt
   31     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 85


State 62

   32 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 86


State 63

   28 Stmt: CompSt .

    $default  reduce using rule 28 (Stmt)


State 64

   24 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 87


State 65

   25 StmtList: Stmt . StmtList

    error   shift, and go to state 53
    INT     shift, and go to state 54
    FLOAT   shift, and go to state 55
    ID      shift, and go to state 56
    MINUS   shift, and go to state 57
    NOT     shift, and go to state 58
    LP      shift, and go to state 59
    LC      shift, and go to state 26
    RETURN  shift, and go to state 60
    IF      shift, and go to state 61
    WHILE   shift, and go to state 62

    RC  reduce using rule 26 (StmtList)

    CompSt    go to state 63
    StmtList  go to state 88
    Stmt      go to state 65
    Exp       go to state 66


State 66

   27 Stmt: Exp . SEMI
   34     | Exp . error SEMI
   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   60    | Exp . DOT ID
   64    | Exp . ASSIGNOP error
   65    | Exp . AND error
   66    | Exp . OR error
   67    | Exp . RELOP error
   68    | Exp . PLUS error
   69    | Exp . MINUS error
   70    | Exp . STAR error
   71    | Exp . DIV error
   76    | Exp . LB error RB

    error     shift, and go to state 89
    SEMI      shift, and go to state 90
    ASSIGNOP  shift, and go to state 91
    RELOP     shift, and go to state 92
    PLUS      shift, and go to state 93
    MINUS     shift, and go to state 94
    STAR      shift, and go to state 95
    DIV       shift, and go to state 96
    AND       shift, and go to state 97
    OR        shift, and go to state 98
    DOT       shift, and go to state 99
    LB        shift, and go to state 100


State 67

   37 DefList: Def DefList .

    $default  reduce using rule 37 (DefList)


State 68

   21 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 21 (VarList)


State 69

   40 Def: Specifier error SEMI .

    $default  reduce using rule 40 (Def)


State 70

   45 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 101


State 71

   41 Def: Specifier DecList error .

    $default  reduce using rule 41 (Def)


State 72

   39 Def: Specifier DecList SEMI .

    $default  reduce using rule 39 (Def)


State 73

   43 DecList: Dec COMMA . DecList

    ID  shift, and go to state 36

    VarDec   go to state 50
    DecList  go to state 102
    Dec      go to state 52


State 74

   33 Stmt: error SEMI .

    $default  reduce using rule 33 (Stmt)


State 75

   57 Exp: ID LP . Args RP
   58    | ID LP . RP
   75    | ID LP . error RP

    error  shift, and go to state 103
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    RP     shift, and go to state 104

    Exp   go to state 105
    Args  go to state 106


State 76

   59 Exp: ID LB . Exp RB

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 107


State 77

   73 Exp: MINUS error .

    $default  reduce using rule 73 (Exp)


State 78

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   55    | MINUS Exp .
   60    | Exp . DOT ID
   64    | Exp . ASSIGNOP error
   65    | Exp . AND error
   66    | Exp . OR error
   67    | Exp . RELOP error
   68    | Exp . PLUS error
   69    | Exp . MINUS error
   70    | Exp . STAR error
   71    | Exp . DIV error
   76    | Exp . LB error RB
